# PlantVision

./: .gitignore  Dockerfile  PlantVision_Project_Spec.md  README.md  pyproject.toml
app/: demo.py
configs/: default.yaml  phenobench_yolo.yaml
data/: README.md
docs/: index.html
notebooks/: 01_explore.ipynb
outputs/: traits.csv
scripts/: convert_to_yolo.py  download_data.py  run_pipeline.py
src/plantvision/: __init__.py  export.py  ingest.py  pipeline.py  segment.py  traits.py  visualize.py
tests/: test_traits.py
