[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantvision"
version = "0.1.0"
description = "Sugar-beet field phenotyping via UAV imagery and YOLO instance segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # yolo26n-seg confirmed available in ultralytics 8.4.79 (verified 2026-06)
    "ultralytics>=8.4",
    "torch>=2.3",
    "torchvision>=0.18",
    "opencv-python-headless>=4.10",
    "Pillow>=10.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "tqdm>=4.66",
    "onnxslim>=0.1.94",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plantvision"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
